vfpl_parser/src/snapshots/vfpl_parser__test__add_stmt.snap
---
source: vfpl_parser/src/test.rs
expression: parsed

---
Ok(
    Expr(
        ArithmeticOp(
            ArithmeticOp {
                span: Span {
                    start: 0,
                    end: 0,
                },
                lhs: Literal(
                    Literal {
                        span: Span {
                            start: 0,
                            end: 0,
                        },
                        kind: Int(
                            0,
                        ),
                    },
                ),
                rhs: Literal(
                    Literal {
                        span: Span {
                            start: 0,
                            end: 0,
                        },
                        kind: Ident(
                            "A",
                        ),
                    },
                ),
                kind: Add,
            },
        ),
    ),
)
