vfpl_parser/src/snapshots/vfpl_parser__test__equal_expr.snap
---
source: vfpl_parser/src/test.rs
expression: parsed

---
Ok(
    Comparison(
        Comparison {
            span: Span {
                start: 0,
                end: 0,
            },
            lhs: Literal(
                Literal {
                    span: Span {
                        start: 0,
                        end: 0,
                    },
                    kind: Absent,
                },
            ),
            rhs: Literal(
                Literal {
                    span: Span {
                        start: 0,
                        end: 0,
                    },
                    kind: Absent,
                },
            ),
            kind: Eq,
        },
    ),
)
