vfpl_parser/src/snapshots/vfpl_parser__test__fn_decl_no_params_empty_body.snap
---
source: vfpl_parser/src/test.rs
expression: parsed

---
Ok(
    FnDecl {
        span: Span {
            start: 0,
            end: 0,
        },
        name: "void",
        params: FnParams {
            span: Span {
                start: 0,
                end: 0,
            },
            params: [],
        },
        fn_return: FnReturn {
            span: Span {
                start: 0,
                end: 0,
            },
            ty: Ty {
                span: Span {
                    start: 0,
                    end: 0,
                },
                kind: Absent,
            },
        },
        body: Body {
            span: Span {
                start: 0,
                end: 0,
            },
            stmts: [],
        },
    },
)
