vfpl_parser/src/snapshots/vfpl_parser__test__fn_decl_single_param_emtpy_body.snap
---
source: vfpl_parser/src/test.rs
expression: parsed

---
Ok(
    FnDecl {
        span: Span {
            start: 0,
            end: 0,
        },
        name: "print",
        params: FnParams {
            span: Span {
                start: 0,
                end: 0,
            },
            params: [
                TypedIdent {
                    span: Span {
                        start: 0,
                        end: 0,
                    },
                    name: "_",
                    ty: Ty {
                        span: Span {
                            start: 0,
                            end: 0,
                        },
                        kind: Absent,
                    },
                },
            ],
        },
        fn_return: FnReturn {
            span: Span {
                start: 0,
                end: 0,
            },
            ty: Ty {
                span: Span {
                    start: 0,
                    end: 0,
                },
                kind: Absent,
            },
        },
        body: Body {
            span: Span {
                start: 0,
                end: 0,
            },
            stmts: [],
        },
    },
)
